--- a/package.json
+++ b/package.json
@@ -24,31 +24,50 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/composition-api": "^0.17.0",
+    "@nuxtjs/markdownit": "^1.2.10",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "markdown-it-attrs": "^3.0.3",
+    "nuxt": "^2.14.6",
+    "nuxt-property-decorator": "^2.8.8",
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "graphql": "^15.4.0",
     "husky": "^4.3.0",
     "jest": "^26.5.0",
     "lint-staged": "^10.4.0",
+    "nuxt-graphql-request": "^3.2.0",
+    "postcss-combine-duplicated-selectors": "8.0.0",
+    "postcss-combine-media-query": "^1.0.1",
     "prettier": "^2.1.2",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
+    "reset-css": "^5.0.1",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
